Fix side scroll on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,6 @@ section {
 }
 
 .c-holder__alpha {
-  width: 100%;
   background-color: #e6f0ed;
 }
 
